# sales_api

./: Dockerfile  Readme.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
apps/client/: models.py  serializers.py  urls.py  views.py
apps/product/: models.py  serializers.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py
apps/sale/: models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
